--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
@@ -205,7 +205,7 @@
               ColumnDefinitions="Auto, *"
               Margin="0 6 6 0"
               IsVisible="{Binding ClientFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
-              
+
               <!-- Title - `Объект (локация)` -->
               <Border
                 Grid.Row="0" Grid.Column="0"
@@ -243,54 +243,52 @@
                       Content="Населённый пункт (НП)" />
 
                     <Grid>
-                      
-                    <TextBox
-                      x:Name="CityName"
-                      Text="{Binding CityName}">
 
-                      <i:Interaction.Behaviors>
+                      <TextBox
+                        x:Name="CityName"
+                        Text="{Binding CityName}">
 
-                        <ia:EventTriggerBehavior EventName="KeyUp">
-                          <ia:InvokeCommandAction
-                            Command="{Binding KeyUpCityName}"
-                            CommandParameter="{Binding CityName}" />
-                        </ia:EventTriggerBehavior>
+                        <i:Interaction.Behaviors>
 
-                        <ia:EventTriggerBehavior EventName="LostFocus">
-                          <ia:InvokeCommandAction
-                            Command="{Binding LostFocusCityName}"
-                            CommandParameter="{Binding SelectedCity}" />
-                        </ia:EventTriggerBehavior>
+                          <ia:EventTriggerBehavior EventName="KeyUp">
+                            <ia:InvokeCommandAction
+                              Command="{Binding KeyUpCityName}"
+                              CommandParameter="{Binding CityName}" />
+                          </ia:EventTriggerBehavior>
 
-                      </i:Interaction.Behaviors>
+                          <ia:EventTriggerBehavior EventName="LostFocus">
+                            <ia:InvokeCommandAction
+                              Command="{Binding LostFocusCityName}"
+                              CommandParameter="{Binding SelectedCity}" />
+                          </ia:EventTriggerBehavior>
 
-                    </TextBox>
-                    
-                    <Button
-                      x:Name="ButtonClearCityName"
-                      Command="{Binding OnClickButtonClearCityName}"
-                      Content="X"
-                      HorizontalAlignment="Right"
-                      IsVisible="{Binding CityName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                      ZIndex="1"/>
+                        </i:Interaction.Behaviors>
+
+                      </TextBox>
+
+                      <Button
+                        x:Name="ButtonClearCityName"
+                        Command="{Binding OnClickButtonClearCityName}"
+                        Content="X"
+                        HorizontalAlignment="Right"
+                        IsVisible="{Binding CityName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                        ZIndex="1" />
 
                     </Grid>
                   </StackPanel>
 
                   <StackPanel
-IsVisible="{Binding !IsSelectedLocation}"
-                    >
+                    IsVisible="{Binding !IsSelectedLocation}">
 
                     <StackPanel
-                      IsVisible="{Binding CityName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                      >
-                      
+                      IsVisible="{Binding CityName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+
                       <Label
                         x:Name="LabelStreetName"
                         Target="StreetName"
                         Content="Улица" />
-                      
-                      
+
+
                       <Grid>
                         <TextBox
                           x:Name="StreetName"
@@ -313,30 +311,29 @@ IsVisible="{Binding !IsSelectedLocation}"
                           </i:Interaction.Behaviors>
 
                         </TextBox>
-                        
+
                         <Button
                           x:Name="ButtonClearStreetName"
                           Command="{Binding OnClickButtonClearStreetName}"
                           Content="X"
                           HorizontalAlignment="Right"
                           IsVisible="{Binding StreetName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                          ZIndex="1"/>
-                        
+                          ZIndex="1" />
+
                       </Grid>
-                      
+
                     </StackPanel>
 
                     <StackPanel
-                      IsVisible="{Binding StreetName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                      >
-                      
+                      IsVisible="{Binding StreetName, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+
                       <Label
                         x:Name="LabelHouseNumber"
                         Target="HouseNumber"
                         Content="Номер дома" />
-                      
+
                       <Grid>
-                        
+
                         <TextBox
                           x:Name="HouseNumber"
                           Text="{Binding HouseNumber}">
@@ -359,20 +356,20 @@ IsVisible="{Binding !IsSelectedLocation}"
                           Content="X"
                           HorizontalAlignment="Right"
                           IsVisible="{Binding HouseNumber, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                          ZIndex="1"/>
-                        
+                          ZIndex="1" />
+
                       </Grid>
                     </StackPanel>
-                    
+
                   </StackPanel>
-                  
+
                   <StackPanel>
-                    
+
                     <Label
                       x:Name="LabelAdditionalInfo"
                       Target="TextBoxAdditionalInfo"
                       Content="Дополнительная информация" />
-                    
+
                     <Grid>
                       <TextBox
                         x:Name="TextBoxAdditionalInfo"
@@ -399,7 +396,7 @@ IsVisible="{Binding !IsSelectedLocation}"
                         Command="{Binding OnClickButtonClearAdditionalInfo}"
                         IsVisible="{Binding AdditionalInfo, Converter={x:Static StringConverters.IsNotNullOrEmpty}}" />
                     </Grid>
-                    
+
                   </StackPanel>
 
                   <CheckBox
@@ -685,7 +682,6 @@ IsVisible="{Binding !IsSelectedLocation}"
       <!-- Панель - `Кнопок` -->
       <StackPanel
         Grid.Row="1"
-        Background="Orange"
         Orientation="Horizontal"
         HorizontalAlignment="Right">
 
@@ -693,7 +689,8 @@ IsVisible="{Binding !IsSelectedLocation}"
           x:Name="ButtonCreateDirectory"
           Content="Создать каталоги"
           Command="{Binding OnClickButtonCreateDirectory}"
-          Margin="3 6" />
+          Margin="3 6"
+          IsEnabled="{Binding ClientFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
 
         <Button
           x:Name="ButtonCancel"
@@ -706,8 +703,18 @@ IsVisible="{Binding !IsSelectedLocation}"
       <StackPanel
         Grid.Row="2"
         Background="Gray">
-        <Label x:Name="LabelInfo"
+        <Grid
+          ColumnDefinitions="*,*">
+          
+        <Label
+          Grid.Column="0"
+          x:Name="LabelInfo"
                Content="{Binding StatusInfo}" />
+
+        <Label
+          Grid.Column="1"
+          Content="{Binding CurrentInfo}"/>
+        </Grid>
 
         <!-- Выделенный клиент -->
         <Border
